--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,24 @@
 # Logs
-*/logs
-*/*.log
-*/npm-debug.log*
-*/yarn-debug.log*
-*/yarn-error.log*
-*/pnpm-debug.log*
-*/lerna-debug.log*
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-/node_modules
-*/dist
-*/dist-ssr
-*/*.local
+node_modules
+dist
+dist-ssr
+*.local
 
 # Editor directories and files
-*/.vscode/*
-*/!.vscode/extensions.json
-*/.idea
-*/.DS_Store
-*/*.suo
-*/*.ntvs*
-*/*.njsproj
-*/*.sln
-**/*.sw?
-/remote-tauri/node_modules
-/**/node_modules
-/app/node_modules
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
