--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@rnr/starter-base",
+	"name": "wemote",
 	"main": "index.js",
 	"version": "1.0.0",
 	"scripts": {
@@ -11,6 +11,7 @@
 		"web": "expo start -c --web"
 	},
 	"dependencies": {
+		"@expo/vector-icons": "^14.0.2",
 		"@radix-ui/react-progress": "^1.0.3",
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@react-native-async-storage/async-storage": "1.23.1",
@@ -23,10 +24,10 @@
 		"@rn-primitives/types": "~1.0.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
-		"expo": "^51.0.14",
+		"expo": "^51.0.11",
 		"expo-linking": "~6.3.1",
 		"expo-navigation-bar": "~3.0.6",
-		"expo-router": "~3.5.16",
+		"expo-router": "^3.5.15",
 		"expo-splash-screen": "~0.27.5",
 		"expo-status-bar": "~1.12.1",
 		"expo-system-ui": "~3.0.6",
