--- a/remote-tauri/src-tauri/Cargo.toml
+++ b/remote-tauri/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "remote-tauri"
-version = "0.0.0"
+version = "1.0.0"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -8,15 +8,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1", features = [] }
+tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = ["system-tray", "shell-open"] }
+tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 actix-web = "4"
 tokio = { version = "1.38.0", features = ["full"] }
+tauri-plugin-shell = "2.0.0-beta.9"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
+
+[lib]
+name = "app_lib"
+crate-type = ["staticlib", "cdylib", "lib"]
