--- a/app/package.json
+++ b/app/package.json
@@ -1,76 +1,81 @@
 {
-	"name": "wemote",
-	"main": "index.js",
-	"version": "1.0.0",
-	"scripts": {
-		"dev": "expo start -c --port=1421",
-		"android": "expo start -c --android --port=1421",
-		"ios": "expo start -c --ios --port=1421",
-		"web": "expo start -c --web --port=1421"
-	},
-	"dependencies": {
-		"@expo/vector-icons": "^14.0.2",
-		"@radix-ui/react-progress": "^1.0.3",
-		"@radix-ui/react-tooltip": "^1.0.7",
-		"@react-native-async-storage/async-storage": "1.23.1",
-		"@react-navigation/native": "^6.0.2",
-		"@rn-primitives/accordion": "^1.0.3",
-		"@rn-primitives/alert-dialog": "^1.0.3",
-		"@rn-primitives/aspect-ratio": "^1.0.3",
-		"@rn-primitives/avatar": "^1.0.3",
-		"@rn-primitives/checkbox": "^1.0.3",
-		"@rn-primitives/collapsible": "^1.0.3",
-		"@rn-primitives/context-menu": "^1.0.3",
-		"@rn-primitives/dialog": "^1.0.3",
-		"@rn-primitives/dropdown-menu": "^1.0.3",
-		"@rn-primitives/hover-card": "^1.0.3",
-		"@rn-primitives/label": "^1.0.3",
-		"@rn-primitives/menubar": "^1.0.3",
-		"@rn-primitives/navigation-menu": "^1.0.3",
-		"@rn-primitives/popover": "^1.0.3",
-		"@rn-primitives/portal": "~1.0.3",
-		"@rn-primitives/progress": "^1.0.3",
-		"@rn-primitives/radio-group": "^1.0.3",
-		"@rn-primitives/select": "^1.0.3",
-		"@rn-primitives/separator": "^1.0.3",
-		"@rn-primitives/slot": "^1.0.3",
-		"@rn-primitives/switch": "^1.0.3",
-		"@rn-primitives/table": "^1.0.3",
-		"@rn-primitives/tabs": "^1.0.3",
-		"@rn-primitives/toggle": "^1.0.3",
-		"@rn-primitives/toggle-group": "^1.0.3",
-		"@rn-primitives/tooltip": "^1.0.3",
-		"@rn-primitives/types": "^1.0.3",
-		"@tanstack/react-query": "^5.51.1",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.0",
-		"expo": "^51.0.11",
-		"expo-dev-client": "~4.0.20",
-		"expo-linking": "~6.3.1",
-		"expo-navigation-bar": "~3.0.6",
-		"expo-router": "^3.5.15",
-		"expo-splash-screen": "~0.27.5",
-		"expo-status-bar": "~1.12.1",
-		"expo-system-ui": "~3.0.6",
-		"lucide-react-native": "^0.378.0",
-		"nativewind": "^4.0.33",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-native": "0.74.2",
-		"react-native-reanimated": "~3.10.1",
-		"react-native-safe-area-context": "4.10.1",
-		"react-native-screens": "~3.31.1",
-		"react-native-svg": "15.2.0",
-		"react-native-web": "~0.19.6",
-		"tailwind-merge": "^2.2.1",
-		"tailwindcss": "^3.4.1",
-		"tailwindcss-animate": "^1.0.7",
-		"zustand": "^4.4.7"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.20.0",
-		"@types/react": "~18.2.79",
-		"typescript": "^5.3.3"
-	},
-	"private": true
+  "name": "wemote",
+  "main": "index.js",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "expo start -c --port=1421",
+    "android": "expo start -c --android --port=1421",
+    "ios": "expo start -c --ios --port=1421",
+    "web": "expo start -c --web --port=1421"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/native": "^6.0.2",
+    "@rn-primitives/accordion": "^1.0.3",
+    "@rn-primitives/alert-dialog": "^1.0.3",
+    "@rn-primitives/aspect-ratio": "^1.0.3",
+    "@rn-primitives/avatar": "^1.0.3",
+    "@rn-primitives/checkbox": "^1.0.3",
+    "@rn-primitives/collapsible": "^1.0.3",
+    "@rn-primitives/context-menu": "^1.0.3",
+    "@rn-primitives/dialog": "^1.0.3",
+    "@rn-primitives/dropdown-menu": "^1.0.3",
+    "@rn-primitives/hover-card": "^1.0.3",
+    "@rn-primitives/label": "^1.0.3",
+    "@rn-primitives/menubar": "^1.0.3",
+    "@rn-primitives/navigation-menu": "^1.0.3",
+    "@rn-primitives/popover": "^1.0.3",
+    "@rn-primitives/portal": "~1.0.3",
+    "@rn-primitives/progress": "^1.0.3",
+    "@rn-primitives/radio-group": "^1.0.3",
+    "@rn-primitives/select": "^1.0.3",
+    "@rn-primitives/separator": "^1.0.3",
+    "@rn-primitives/slot": "^1.0.3",
+    "@rn-primitives/switch": "^1.0.3",
+    "@rn-primitives/table": "^1.0.3",
+    "@rn-primitives/tabs": "^1.0.3",
+    "@rn-primitives/toggle": "^1.0.3",
+    "@rn-primitives/toggle-group": "^1.0.3",
+    "@rn-primitives/tooltip": "^1.0.3",
+    "@rn-primitives/types": "^1.0.3",
+    "@tanstack/react-query": "^5.51.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "expo": "^51.0.11",
+    "expo-dev-client": "~4.0.20",
+    "expo-linking": "~6.3.1",
+    "expo-navigation-bar": "~3.0.6",
+    "expo-router": "^3.5.15",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.6",
+    "lucide-react-native": "^0.378.0",
+    "nativewind": "^4.0.33",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.2",
+    "react-native-mmkv": "^2.12.2",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "~3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.6",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8",
+    "zustand": "^4.4.7"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.79",
+    "typescript": "^5.3.3"
+  },
+  "private": true,
+  "trustedDependencies": [
+    "core-js"
+  ]
 }
