--- a/remote-tauri/src-tauri/Cargo.toml
+++ b/remote-tauri/src-tauri/Cargo.toml
@@ -14,9 +14,14 @@ tauri-build = { version = "2.0.0-beta", features = [] }
 tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-actix-web = "4"
+salvo = "0.64.0"
 tokio = { version = "1.38.0", features = ["full"] }
 tauri-plugin-shell = "2.0.0-beta.9"
+parking_lot = "0.12.3"
+env_logger = "0.11.5"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+lazy_static = "1.5.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
