--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"dev": "tauri dev",
 		"frontend": "vite",
-		"build": "tsc && vite build",
+		"build-web": "tsc && vite build",
+		"build": "tauri build",
 		"preview": "vite preview",
 		"format": "biome format --write ./src"
 	},
@@ -40,6 +41,8 @@
 		"@radix-ui/react-toggle-group": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
 		"@tauri-apps/api": "^2.0.0-beta.14",
+		"@tauri-apps/plugin-autostart": "^2.0.0-beta.7",
+		"@tauri-apps/plugin-window-state": "^2.0.0-beta.8",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
