--- a/server/src-tauri/Cargo.toml
+++ b/server/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "remote-tauri"
-version = "1.0.0"
-description = "A Tauri App"
-authors = ["you"]
+version = "0.0.1"
+description = "A Home Remote App"
+authors = ["ibanks"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -30,3 +30,6 @@ custom-protocol = ["tauri/custom-protocol"]
 [lib]
 name = "app_lib"
 crate-type = ["staticlib", "cdylib", "lib"]
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-autostart = "2.0.0-beta.9"
