--- a/app/app.json
+++ b/app/app.json
@@ -41,6 +41,10 @@
 				"projectId": "f409a065-7a7f-4386-bc8c-b451d8dfe3c2"
 			}
 		},
-		"owner": "binkycs"
+		"owner": "binkycs",
+		"runtimeVersion": "0.0.2",
+		"updates": {
+			"url": "https://u.expo.dev/f409a065-7a7f-4386-bc8c-b451d8dfe3c2"
+		}
 	}
 }
