--- a/app/package.json
+++ b/app/package.json
@@ -54,6 +54,7 @@
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
+    "expo-updates": "~0.25.21",
     "lucide-react-native": "^0.378.0",
     "nativewind": "^4.0.33",
     "react": "18.2.0",
